# derive-collect-docs

./: .gitignore  Cargo.toml  LICENSE-MIT  Readme.adoc  Readme.md
.github/workflows/: ci.yaml
examples/: Foo.adoc  foo.rs
